k8s/dev/deployment.yaml
# 配置部署信息
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: appname
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: appname
    spec:
      containers:
      - name: appname
        image: reg.aliyun.so/project/appname:v2.0-6-g2e7a501
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        volumeMounts:
        - mountPath: /data/logs
          name: appname-volume
        command: ["/bin/sh","-c"] #自定义命令
        args: ["nohup ./appname -conf ./config/deve"]
      volumes:
      - hostPath:
          path: /data/logs
        name: appname-volume
